--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Mulish:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/estilos.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
                 </div>
                 <video autoplay loop
                     muted><!--autoplay funciona cuando colocas un video y no se reproduce, con esto va a hacer que se reproduzca automaticamente-->
-                    <source src="/assets/bg_video.mp4">
+                    <source src="./assets/bg_video.mp4">
                 </video>
             </div>
         </div>
@@ -64,12 +64,12 @@
         </div>
         <div class="imagenes-nosotros">
             <div class="imagen1">
-                <img data-src="assets/img/nosotros1.webp"
+                <img data-src="./assets/img/nosotros1.webp"
                     alt="mujer comiendo pizza"><!--los data guardan informacion adicional-->
             </div>
             <div class="imagenes2">
-                <img data-src="assets/img/nosotros2.webp" alt="mujeres comiendo pizza">
-                <img data-src="assets/img/nosotros3.webp" alt="plato con pasta">
+                <img data-src="./assets/img/nosotros2.webp" alt="mujeres comiendo pizza">
+                <img data-src="./assets/img/nosotros3.webp" alt="plato con pasta">
             </div>
         </div>
     </div>
@@ -85,7 +85,7 @@
         </div>
         <div class="platillos">
             <div class="platillo" data-platillo="ensalada">
-                <img data-src="assets/img/ensalada.webp" alt="ensalada">
+                <img data-src="./assets/img/ensalada.webp" alt="ensalada">
                 <h2>Quinoa</h2>
                 <p>Quinoa, cerezas, tomate, aceitunas, cereal</p>
                 <div class="precio">
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="platillo" data-platillo="ensalada">
-                <img data-src="assets/img/ensalada2.webp" alt="ensalada">
+                <img data-src="./assets/img/ensalada2.webp" alt="ensalada">
                 <h2>Quinoa</h2>
                 <p>Quinoa, cerezas, tomate, aceitunas, cereal</p>
                 <div class="precio">
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="platillo" data-platillo="ensalada">
-                <img data-src="assets/img/ensalada.webp" alt="ensalada">
+                <img data-src="./assets/img/ensalada.webp" alt="ensalada">
                 <h2>Quinoa</h2>
                 <p>Quinoa, cerezas, tomate, aceitunas, cereal</p>
                 <div class="precio">
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="platillo" data-platillo="pasta">
-                <img data-src="assets/img/pasta1.webp" alt="pasta">
+                <img data-src="./assets/img/pasta1.webp" alt="pasta">
                 <h2>Pasta</h2>
                 <p>Quinoa, cerezas, tomate, aceitunas, cereal</p>
                 <div class="precio">
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="platillo" data-platillo="pasta">
-                <img data-src="assets/img/pasta2.webp" alt="pasta">
+                <img data-src="./assets/img/pasta2.webp" alt="pasta">
                 <h2>Pasta</h2>
                 <p>Quinoa, cerezas, tomate, aceitunas, cereal</p>
                 <div class="precio">
@@ -130,7 +130,7 @@
                 </div>
             </div>
             <div class="platillo" data-platillo="pasta">
-                <img data-src="assets/img/pasta2.webp" alt="pasta">
+                <img data-src="./assets/img/pasta2.webp" alt="pasta">
                 <h2>Pasta</h2>
                 <p>Quinoa, cerezas, tomate, aceitunas, cereal</p>
                 <div class="precio">
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="platillo" data-platillo="pizza">
-                <img data-src="assets/img/pizza1.webp" alt="pizza">
+                <img data-src="./assets/img/pizza1.webp" alt="pizza">
                 <h2>Pizza</h2>
                 <p>Masa madre, queso mozzarella, pasta de tomate, costilla de dylan, albahaca, salami italiano</p>
                 <div class="precio">
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="platillo" data-platillo="pizza">
-                <img data-src="assets/img/pizza2.webp" alt="pizza">
+                <img data-src="./assets/img/pizza2.webp" alt="pizza">
                 <h2>Pizza</h2>
                 <p>Masa madre, queso mozzarella, pasta de tomate, albahaca, salami italiano</p>
                 <div class="precio">
@@ -157,7 +157,7 @@
                 </div>
             </div>
             <div class="platillo" data-platillo="pizza">
-                <img data-src="assets/img/pizza2.webp" alt="pizza">
+                <img data-src="./assets/img/pizza2.webp" alt="pizza">
                 <h2>Pizza</h2>
                 <p>Masa madre, queso mozzarella, pasta de tomate, albahaca, salami italiano</p>
                 <div class="precio">
@@ -166,7 +166,7 @@
                 </div>
             </div>
             <div class="platillo" data-platillo="postre">
-                <img data-src="assets/img/postres1.webp" alt="postre">
+                <img data-src="./assets/img/postres1.webp" alt="postre">
                 <h2>Postre</h2>
                 <p>Quinoa, cerezas, tomate, aceitunas, cereal</p>
                 <div class="precio">
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="platillo" data-platillo="postre">
-                <img data-src="assets/img/postres2.webp" alt="postre">
+                <img data-src="./assets/img/postres2.webp" alt="postre">
                 <h2>Postre</h2>
                 <p>Quinoa, cerezas, tomate, aceitunas, cereal</p>
                 <div class="precio">
@@ -184,7 +184,7 @@
                 </div>
             </div>
             <div class="platillo" data-platillo="postre">
-                <img data-src="assets/img/postres3.webp" alt="postre">
+                <img data-src="./assets/img/postres3.webp" alt="postre">
                 <h2>Postre</h2>
                 <p>Quinoa, cerezas, tomate, aceitunas, cereal</p>
                 <div class="precio">
@@ -220,7 +220,7 @@
                 <a href="#" class="btn btn-verde">Leer Biografía</a>
             </div>
             <div class="imagen-chef">
-                <img data-src="/assets/img/chef.webp" alt="fotografia del chef">
+                <img data-src="./assets/img/chef.webp" alt="fotografia del chef">
             </div>
         </div>
     </section>
@@ -299,7 +299,7 @@
 
 
 
-    <script src="js/app.js"></script>
+    <script src="./js/app.js"></script>
 
 </body>
 
