--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         </div>
     </div>
     <footer class="footer">
-        <p>Todos los derechos reservados &copy; 2023 Ristorante Turilli, desarrollado por Miguel Ángel Madroñero Sequeira</p><!--&copy; es una entidad, es para colocar el simbolo de copyrigth-->
+        <p>Todos los derechos reservados &copy; 2023 Ristorante Turilli, desarrollado por Miguel Ángel Madroñero Sequeira.</p><!--&copy; es una entidad, es para colocar el simbolo de copyrigth-->
     </footer>
 
 
